changed jdk version + minor changes